# kindle-automator

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CLAUDE.md  EMULATOR_UNIFICATION_PLAN.md  Kindle Automator.code-workspace  MIGRATION_GUIDE.md  Makefile  Makefile.database  PAGE_NUMBER_OCR_IMPLEMENTATION.md  README.md  alembic.ini  ansible.cfg  automator.py  config.template.py  config_template.py  driver.py  pyproject.toml  pytest.ini  requirements.txt  setup_wireguard.py  shell.py
ansible/: .ansible-lint  .env.ansible.yml  database_backup.yml  db_operations.yml  deploy.yml  inventory.ini  provision.yml
database/: README.md  __init__.py  connection.py  models.py
docs/: idle_shutdown.md
handlers/: about_book_popover_handler.py  auth_handler.py  library_handler.py  library_handler_scroll.py  library_handler_search.py  navigation_handler.py  permissions_handler.py  reader_handler.py  reader_page_handler.py  style_handler.py  table_of_contents_handler.py  test_fixtures_handler.py
presentation/: index.html
scripts/: audit_vnc.py  bootstrap_auth_metrics.py  db_connect.py  db_connect.sh  db_export.py  db_import.py  export_users_to_json.py  graceful_shutdown.py  idle_check_cron.sh  migrate_json_to_db.py  migrate_vnc_instances_to_db.py  refresh_auth.sh  setup_db_privileges.py  show_vnc_table.py  test_auth.sh  test_zombie_cleanup.py
server/: README_ANSI_COLORS.md  README_CAPTCHA_VNC.md  README_REQUEST_LOGGER.md  README_VNC.md  README_VNC_PATCH.md  admin.py  ansi_colors.py  ansi_colors_demo.py  automation_server.py  config.py  image_utils.py  logging_config.py  (+6 more)
(+318 files in other folders)
